Add ids to sections to enable linking to them

--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section id="rpi">
       <header>
         <h3>Rensselaer Polytechnic Institute</h3>
         <h4>81% of major courses completed towards B.S., Computer Science</h4>
