--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section id="nebulous">
       <header>
         <h3>Nebulous Inc.</h3>
         <h4>Software Engineer & First Employee</h4>
@@ -26,7 +26,7 @@
       </header>
       <p>BOSTON — Nebulous is a four person startup and creator of <a href="https://sia.tech">Sia</a>, an <a href="https://github.com/NebulousLabs/Sia">open-source</a> blockchain-based decentralized storage marketplace. Sia's decentralized peer-to-peer network provided unique challenges. Much of my time was spent securing the gateway code that maintains the peer-to-peer network to prevent against eclipse attacks. We released Sia version 1.0 in June and to date have raised $1.25 million in funding.</p>
     </section>
-    <section>
+    <section id="linkedin">
       <header>
         <h3>LinkedIn</h3>
         <h4>Software Engineer Intern</h4>
@@ -34,7 +34,7 @@
       </header>
       <p>MOUNTAIN VIEW — LinkedIn's homepage team is responsible for LinkedIn's homepage and news feed. As the most visited page on LinkedIn, writing new features for the homepage required careful consideration to ensure load times were not affected. On the team I was responsible for creating company and school mini-profiles, and adding a permalink UI to individual news updates. These features used the Scala Play Framework server-side and Dust.js client-side.</p>
     </section>
-    <section>
+    <section id="intentional">
       <header>
         <h3>Intentional Software</h3>
         <h4>Software Engineer Intern</h4>
@@ -43,7 +43,7 @@
       <p>BELLEVUE — At Intentional Software I was tasked with designing and creating alternative interfaces for interacting with large displays out of arms reach. This presented many unique design challenges; the interfaces needed to be intuitive, but in usability studies mimicking a touchscreen was too taxing on the user without physically being able to rest their arms on the display.</p>
       <p>These challenges were solved using the greater degrees of freedom provided by a Microsoft Kinect. The Kinect enabled not only positional tracking, like a touchscreen, but also gesture and hand pose recognition. I wrote a hand pose classifier using feature matching in OpenCV to augment the Kinect's existing pose classifier, and wrote an <a href="https://github.com/VoidingWarranties/N-D-1-Recognizer">N-dimensional implementation</a> of <a href="https://depts.washington.edu/aimgroup/proj/dollar/">UW's $1 Recognizer</a> for atomic gesture recognition.</p>
     </section>
-    <section>
+    <section id="bloomberg">
       <header>
         <h3>Bloomberg L.P.</h3>
         <h4>Software Engineer Intern</h4>
@@ -51,7 +51,7 @@
       </header>
       <p>NEW YORK — Bloomberg obtains market data from a variety of data sources which often provide incorrect data, often as a result of human error. When errors are noticed by clients it is important to track the error to the source so as to differentiate between errors from external sources and internal bugs. I designed and developed a Bloomberg Terminal application for internal use to trace the source of these errors and provide a simple interface for fixing errors from external sources. Even before it was finished, the tool was being used to significantly reduce the time between noticing data errors and fixing them.</p>
     </section>
-    <section>
+    <section id="mimir">
       <header>
         <h3>Mimir Physics</h3>
         <h4>Software Engineer & Physics Consultant</h4>
