--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section id="myo-home">
       <header>
         <h3>Myo Home</h3>
         <h4>YHack 2014 — Best Use of Intel Galileo</h4>
@@ -29,7 +29,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/couLh0OFTwQ" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
-    <section>
+    <section id="tripping-wookie">
       <header>
         <h3>Tripping Wookie</h3>
         <h4>HackRU 2014 — Organizer's Choice Award</h4>
@@ -37,7 +37,7 @@
       </header>
       <p>RUTGERS — Tripping Wookie is an <a href="https://github.com/VoidingWarranties/TrippingWookie">open-source</a> project developed with Brian Sheedy that provides a natural user interface using only your device's built in camera. Technologies like the Microsoft Kinect, Leap Motion, and Thalmic Myo are rapidly increasing the adoption of natural user interfaces. However, their proprietary and expensive hardware will prevent their widespread adoption. Front facing cameras are already included in most laptops and phones. With Tripping Wookie's object tracking and gesture recognition we were able to play 2048 and browse maps with natural hand gestures.</p>
     </section>
-    <section>
+    <section id="sign-sight">
       <header>
         <h3>Sign Sight</h3>
         <h4>A project for Rensselaer Center for Open Source</h4>
