Link to / instead of /index.html
and link to work places from education

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Jordan Horwich</h1>
     <nav>
       <ul>
-        <li><a class="active" href="/index.html">Work</a></li>
+        <li><a class="active" href="/">Work</a></li>
         <li><a href="/projects.html">Projects</a></li>
         <li><a href="/education.html">Education</a></li>
       </ul>
