--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <h1>Jordan Horwich</h1>
     <nav>
       <ul>
-        <li><a href="/index.html">Work</a></li>
+        <li><a href="/">Work</a></li>
         <li><a class="active" href="/projects.html">Projects</a></li>
         <li><a href="/education.html">Education</a></li>
       </ul>
