embed videos using youtube-nocookie.com instead of youtube.com

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>BELLEVUE — At Intentional Software I was tasked with designing and creating alternative interfaces for interacting with large displays out of arms reach. This presented many unique design challenges; the interfaces needed to be intuitive, but in usability studies mimicking a touchscreen was too taxing on the user without physically being able to rest their arms on the display.</p>
       <p>These challenges were solved using the greater degrees of freedom provided by a Microsoft Kinect. The Kinect enabled not only positional tracking, like a touchscreen, but also gesture and hand pose recognition. I wrote a hand pose classifier using feature matching in OpenCV to augment the Kinect's existing pose classifier, and wrote an <a href="https://github.com/VoidingWarranties/N-D-1-Recognizer">N-dimensional implementation</a> of <a href="https://depts.washington.edu/aimgroup/proj/dollar/">UW's $1 Recognizer</a> for atomic gesture recognition.</p>
       <div class="video-wrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pvzw2m9lFe8" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pvzw2m9lFe8" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
     <section id="bloomberg">
